# opencv_Facedetection

./: CMakeLists.txt  README.md  main.cpp  quickdemo.cpp  quickopencv.h
